examples/test/testpolicy13948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13948
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key40: value33
      key4: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value22
          key2: value45
      podSelector:
        matchLabels:
          key43: value49
          key10: value13
          key11: value24
